# prospect-agent

./: .dockerignore  .env.example  .gitignore  DETAILS.md  Dockerfile  README.md  ROADMAP.md  SKILL.md  appels_offres.py  bettercontact_client.py  bodacc_client.py  brave_search.py  build_comeos_final.py  build_comeos_groupea.py  build_comeos_groupea_v2.py  build_comeos_xlsx.py  careers_page.py  cold_email.py  datagma_client.py  decision_maker_llm.py  decision_trace.py  domain_guess.py  dropcontact_client.py  email_finder.py  email_pattern_engine.py  francetravail_client.py  google_cse.py  google_places.py  here_maps.py  http_safe.py  hubspot_client.py  hunter_client.py  icp.py  icp_from_nl.py  icp_tuner.py  lead_reasoner.py  lead_store.py  linkedin_probe.py  mentions_legales.py  mobile_finder.py  (+30 more)
benchmark/: README.md  __init__.py  coverage.py  golden_truth.csv  precision.py  report.py
data/: leads-2026-05-18-154025.xlsx
data/http_cache/: cache.db
data/outputs/: distilleries-bio-france-2026-05-18.csv  distilleries-bio-france-AUTO.csv  distilleries-bio-france-EXCEL-FR.csv  distilleries-bio-france.xlsx  prospects-chr-paris.csv  prospects-chr-paris.xlsx
data/runs/: paris_chr_partial.json  paris_palace_websites.json
output/: test-v04.csv  test-v04.xlsx
scripts/: pipeline.py  reload_keys.sh  sirene_client.py  test_bodacc.sh  test_bodacc_query.py  test_junk.py  test_linkedin_probe.sh  test_mentions.sh  test_multi_naf.py  test_phones.sh  test_places.sh  test_quotas.py  triangulation.py  upload_multica.sh  website_finder.py
